fixed some layout issues

--- a/transitimeWebapp/src/main/webapp/map/css/avlMapUI.css
+++ b/transitimeWebapp/src/main/webapp/map/css/avlMapUI.css
@@ -40,17 +40,6 @@ div.avlTriangle {
   padding: 2%;
 }
 
-.param {
-  margin-top: 10px;
-  text-align: right;
-}
-
-/* overide mapUi.css */
-#params div {
-  visibility: visible; 
-  left: 0%;
-}
-
 /* Playback menu */
 #playback_container {
 	position: absolute;
@@ -64,6 +53,7 @@ div.avlTriangle {
 	text-align: center;
 	border-radius: 25px;
     padding: 2%;
+    font-family: monospace;
 }
 
 #playback input {
